aanpassing admin paginas

--- a/app/templates/base_admin.html
+++ b/app/templates/base_admin.html
@@ -15,8 +15,8 @@
         <div class="image-text">
             <span class="image"></span>
             <div class="text logo-text">
-                <span class="name">Codinglab</span>
-                <span class="profession">Web developer</span>
+                <span class="name">ADMIN</span>
+
             </div>
         </div>
         <i class='bx bx-chevron-right toggle'></i>
@@ -36,7 +36,8 @@
         </div>
 
         <div class="bottom-content">
-            <li><a href="#"><i class='bx bx-log-out icon'></i><span class="text nav-text">Logout</span></a></li>
+            <li><a href="{{ url_for('routes.logout') }}"><i class='bx bx-log-out icon'></i><span class="text nav-text">Logout</span></a></li>
+
            <!---< <li class="mode">
                 <div class="sun-moon">
                     <i class='bx bx-moon icon moon'></i>
