defect route toegevoegd

--- a/app/templates/defect.html
+++ b/app/templates/defect.html
@@ -1,21 +1,50 @@
 {% extends "base.html" %}
 
+{% block title %}Fiets Defect Melden{% endblock %}
+
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/defect.css') }}">
 {% endblock %}
 
 {% block content %}
-<img src="{{ url_for('static', filename='img/O_C.png') }}" alt="Onder constructie" width="300" style="display: block; margin: 0 auto;">
+<div class="div4">
+    <div id="card-wrapper" class="card wrapper">
+        <ul class="card-slider swiper-wrapper">
+            <li class="card-item swiper-slide">
+                <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
 
+                <div class="card-item__content">
+                    <h1 class="card-item__title">FIETS DEFECT</h1>
+                    <img class="streep" src="{{ url_for('static', filename='images/streep.svg') }}" alt="decoratief lijntje">
 
-<div class="card-slider">
-    <div class="card-item">
-        <h2 style="margin:auto; width:fit-content"></h2>
-        <p style="margin:auto; width:fit-content">meer vragen -->  bel Aslambek</p>
+                    <form method="POST" action="{{ url_for('routes.defect') }}" class="defect-form">
+                        <div class="form-group">
+                            <label for="fiets_id">Fiets ID</label>
+                            <input type="text" id="fiets_id" name="fiets_id" placeholder="Bijv. 1234" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="probleem">Wat is er aan de hand?</label>
+                            <textarea id="probleem" name="probleem" rows="4" placeholder="Beschrijf het probleem..." required></textarea>
+                        </div>
+
+                        <button type="submit" class="card-slider__button">MELD NU</button>
+                    </form>
+
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            <div class="flash-messages">
+                                {% for category, message in messages %}
+                                    <div class="alert alert-{{ category }}">{{ message }}</div>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    {% endwith %}
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
 {% endblock %}
 
-{% block scripts %}
-<!-- eventueel toekomstige JavaScript -->
-{% endblock %}
+
