--- a/app/templates/tarieven/dagpas.html
+++ b/app/templates/tarieven/dagpas.html
@@ -14,7 +14,7 @@
 <div class="card-slider">
     <div class="card-item">
     <h2 style="margin:auto; width:fit-content">Dagpas Aanvragen</h2>
-        <form method="POST" action="/tarieven/weekpas" class="form-container">
+        <form method="POST" action="/tarieven/dagpas" class="form-container">
 
           <div class="form-row">
               <div class="form-group">
