--- a/app/templates/base_admin.html
+++ b/app/templates/base_admin.html
@@ -28,7 +28,8 @@
             </li>
             <ul class="menu-links">
                 <li class="nav-link"><a href="{{ url_for('routes.admin') }}"><i class='bx bx-home-alt icon'></i><span class="text nav-text">Dashboard</span></a></li>
-                <li class="nav-link"><a href="{{ url_for('routes.admin_simulatie') }}"><i class='bx bx-cog icon'></i><span class="text nav-text">Admin</span></a></li>
+                <li class="nav-link"><a href="{{ url_for('routes.admin_simulatie') }}"><i class='bx bx-stats icon
+'></i><span class="text nav-text">Admin</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_data') }}"><i class='bx bx-bell icon'></i><span class="text nav-text">Notifications</span></a></li>
                 <li class="nav-link"><a href="#"><i class='bx bx-pie-chart-alt icon'></i><span class="text nav-text">Analytics</span></a></li>
 
