--- a/app/templates/defect.html
+++ b/app/templates/defect.html
@@ -9,10 +9,14 @@
 {% block content %}
 <div class="div4">
     <div id="card-wrapper" class="card wrapper">
-        <ul class="card-slider swiper-wrapper">
-            <li class="card-item swiper-slide">
-                <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
+        <ul class="card-slider">
+            <li class="card-item">
+                <!-- Afbeelding uit de map img -->
+                <img src="{{ url_for('static', filename='img/fiets_kapot.png') }}"
+                     class="card-image" alt="Fiets defect">
 
+
+                <!-- Inhoud rechts -->
                 <div class="card-item__content">
                     <h1 class="card-item__title">FIETS DEFECT</h1>
                     <img class="streep" src="{{ url_for('static', filename='images/streep.svg') }}" alt="decoratief lijntje">
@@ -46,5 +50,3 @@
     </div>
 </div>
 {% endblock %}
-
-
