Indizn je al een abonnement gekocht hebt, komt er op de tarievenpagina:'Je hebt al een...'. Je kan ook geen tweede abonnement aankopen als je er al één hebt. Je krijgt dan bij het indrukken van de knop aanvragen bij het aanvraagformulier ... een melding 'je hebt al een...'.

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -55,7 +55,7 @@
                   geen abonnement
                 </a>
                 {% if user.titel and user.voornaam and user.achternaam and user.telefoonnummer and user.email %}
-                  <br><small class="text-light">Abonnement kopen? klik op geen abonnement om naar tarieven te gaan.</small>
+                  <br><small class="text-red">Abonnement kopen? klik op geen abonnement om naar tarieven te gaan.</small>
                 {% endif %}
               {% endif %}
             </p>
