--- a/app/templates/tarieven.html
+++ b/app/templates/tarieven.html
@@ -7,6 +7,11 @@
 {% endblock %}
 
 {% block content %}
+{% if session['Gebruiker'] and session['Gebruiker'].get('abonnement') and session['Gebruiker']['abonnement'] != 'Geen abonnement' %}
+  <div style="background-color: #fff3cd; color: #856404; padding: 15px; margin: 20px auto; border: 1px solid #ffeeba; border-radius: 8px; max-width: 800px; text-align: center;">
+    Je hebt al een {{ session['Gebruiker']['abonnement'] | lower }}.
+  </div>
+{% endif %}
 
 <div class="div4">
     <div id="card-wrapper" class="card wrapper">
