--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
     <a href="#">Hoe het werkt</a>
     <a href="/tarieven">Tarieven</a>
     <a href="maps">Vind een fiets</a>
+    <a href="/huur_fiets">Huur fiets</a>
     <a href="help">Help</a>
     <a href="/#footer">Contact</a>
     <div class="dropdown">
