--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,15 +1,14 @@
 /* Algemene basisstijl */
-*{
-  font-family: "Segoe UI", sans-serif ;
+* {
+  font-family: "Segoe UI", sans-serif;
 }
-.smoltext{
+.smoltext {
   font-family: "Segoe UI", sans-serif;
 }
 
 body {
   margin: 0;
   padding: 0;
-
   background-color: #E9E9E9;
 }
 
@@ -37,7 +36,7 @@ header {
 /* Navigatie links in het midden */
 .nav-links {
   display: flex;
-  gap: 20px;
+  gap: 13px;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -49,28 +48,29 @@ header {
   font-weight: 500;
   position: relative;
   display: inline-block;
-  text-decoration: none;
   transition: color 0.3s ease-out;
 }
+
 .nav-links a::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #2b2d42; /* Adjust color */
-    left: 0;
-    bottom: 0;
-    transform: scaleX(0);
-    transform-origin: bottom right;
-    transition: transform 0.3s ease-out;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #2b2d42;
+  left: 0;
+  bottom: 0;
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.3s ease-out;
 }
-.nav-links a:hover{
+
+.nav-links a:hover {
   color: #2b2d42;
 }
 
 .nav-links a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 /* Dropdown menu */
@@ -107,6 +107,33 @@ header {
   display: block;
 }
 
+/* Taalselector */
+.language-selector {
+  margin-left: 1px;
+  margin-right: 2px;
+}
+
+.language-selector select {
+  padding: 0 7px 3px;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  margin-left: 0;
+  margin-right: 2px;
+  width: auto;
+  border-radius: 20px;
+  background: none;
+  background-color: #D1003C;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  appearance: none;
+}
+
+.language-selector select:hover {
+  background-color: black;
+}
+
 /* Login / Register knoppen rechts */
 .nav-buttons {
   display: flex;
@@ -141,18 +168,14 @@ header {
   background-color: #f8d7da;
 }
 
-
-/* alle links */
-a{
+/* Alle links */
+a {
   text-decoration: none;
 }
 
-
 .profile {
-
-color: white;
+  color: white;
   background: transparent;
-
 }
 
 .nav-buttons .profile:hover {
@@ -160,10 +183,8 @@ color: white;
 }
 
 .logout {
-
   background: white;
   color: #D1003C;
-
 }
 
 .nav-buttons .logout:hover {
