--- a/app/templates/tarieven/dagpas.html
+++ b/app/templates/tarieven/dagpas.html
@@ -68,7 +68,7 @@
           </div>
 
           <div class="form-group">
-              type="submit">Aanvragen</button>
+              <button type="submit">Aanvragen</button>
           </div>
 
         </form>
