--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -250,7 +250,7 @@ body.dark-mode .list-group-item {
   font-size: 1rem;
   background-color: white; /* geel in lichtmodus */
   color: black;
-  border: 2px solid #FFD700;
+  border: none;
   cursor: pointer;
   transition: all 0.3s ease;
 }
