--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -5,7 +5,7 @@
 .dashboard-title {
   font-size: 2rem;
   margin-bottom: 1.5rem;
-  color: #2c3e50;
+  color: #D1003C;
 }
 
 /* Systeemstatus */
@@ -40,7 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #695cfe;
+  background-color: #D1003C;
   color: white;
   text-decoration: none;
   font-size: 1.1rem;
@@ -50,6 +50,6 @@
 }
 
 .link-card:hover {
-  background-color: #574cd9;
+  background-color: #D1003C;
 }
 
