--- a/app/static/css/admin_simulatie.css
+++ b/app/static/css/admin_simulatie.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1, h2 {
-    color: #2c3e50;
+    color: #D1003C;
 }
 
 ul {
@@ -49,7 +49,7 @@ form input[type="number"] {
 }
 
 button {
-    background-color: #3498db;
+    background-color: #D1003C;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -58,7 +58,7 @@ button {
 }
 
 button:hover {
-    background-color: #2980b9;
+    background-color: #D1003C;
 }
 
 
@@ -81,7 +81,7 @@ th, td {
 }
 
 th {
-    background-color: #3498db;
+    background-color: #D1003C;
     color: white;
 }
 
@@ -172,7 +172,7 @@ tr:hover {
 
 
 ::selection{
-    background-color: var(--primary-color);
+    background-color: #D1003C;
     color: #fff;
 }
 
@@ -291,7 +291,7 @@ header .image-text .profession{
     transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
-    background-color: var(--primary-color);
+    background-color: #D1003C;
     color: var(--sidebar-color);
     border-radius: 50%;
     display: flex;
@@ -347,7 +347,7 @@ body.dark .sidebar header .toggle{
 }
 
 .sidebar li a:hover{
-    background-color: var(--primary-color);
+    background-color: #D1003C;
 }
 .sidebar li a:hover .icon,
 .sidebar li a:hover .text{
@@ -492,7 +492,7 @@ body.dark .home .text{
 }
 
 .fixed-header-table thead th {
-  background-color: #3498db;
+  background-color: #D1003C;
   color: white;
   position: sticky;
   top: 0;
