--- a/app/static/css/base_admin.css
+++ b/app/static/css/base_admin.css
@@ -28,7 +28,7 @@
     /* ===== Colors ===== */
     --body-color: #E4E9F7;
     --sidebar-color: #FFF;
-    --primary-color: #695CFE;
+    --primary-color: #D1003C;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #707070;
@@ -43,7 +43,7 @@
 
 
 ::selection{
-    background-color: var(--primary-color);
+    background-color: #D1003C;
     color: #fff;
 }
 
@@ -162,7 +162,7 @@ header .image-text .profession{
     transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
-    background-color: var(--primary-color);
+    background-color: #D1003C;
     color: var(--sidebar-color);
     border-radius: 50%;
     display: flex;
@@ -218,7 +218,7 @@ body.dark .sidebar header .toggle{
 }
 
 .sidebar li a:hover{
-    background-color: var(--primary-color);
+    background-color: #D1003C;
 }
 .sidebar li a:hover .icon,
 .sidebar li a:hover .text{
