prompt voor als men verander van simulatie tab in admin

--- a/app/templates/admin_simulatie.html
+++ b/app/templates/admin_simulatie.html
@@ -99,7 +99,7 @@
 {% endif %}
 
 <script>
-  // Flag om bij te houden of CSV is gedownload
+  // Om bij te houden of CSV is gedownload
   let csvGedownload = false;
 
   // Zorg dat de download link een id heeft: download-csv
